# skydiveos-autoedit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  GOPRO_INGEST_SETUP.md  Makefile  README.md  docker-compose.yml  pyproject.toml
analysis/: __init__.py  __main__.py  extract.py  models.py  proxy.py  score.py
api/: __init__.py  app.py  auth.py  celery_app.py  config.py  jobs.py  queue.py  schemas.py  selfie.py  tasks.py
deploy/mac/: com.skydiveos.ingest.plist.template  install.sh  load-service.sh  run.sh
diagnostic_output/: findings.md
edl/: __init__.py  compose.py  schema.py  storage.py  validate.py
ingest/: __init__.py  camera.py  discovery.py  events.py  pull.py  registry.py  scanner.py  storage.py
metadata/: __init__.py  __main__.py  gpmf.py  segment.py
render/: __init__.py  __main__.py  builder.py  caption.py  render.py  templates.py
review-ui/: QA.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
review-ui/src/: EdlReviewScreen.tsx  api.ts  index.css  index.ts  main.tsx  types.ts  vite-env.d.ts
review-ui/src/components/: ClipBlock.tsx  PreviewPlayer.tsx  Timeline.tsx
review-ui/src/components/ui/: button.tsx
review-ui/src/lib/: utils.ts
scripts/: check_camera.py  diagnose_ultimum.py  learn_from_job.py  mock_skydiveos.py  process_jump.py  replay_selfie.py  scene_timeline.py  seed_review_job.py  sim_add_clip.py  trigger_raw_upload.py
tests/: test_analysis.py  test_api.py  test_discovery.py  test_edl.py  test_edl_validate.py  test_ingest.py  test_metadata.py  test_proxy.py  test_render.py  test_selfie.py  test_ultimate.py
tests/fixtures/external_21cdb2c5/: edl_freefall.json  edl_full.json  edl_highlights.json  scene_manifest.json
tests/fixtures/selfie_d15c2e42/: edl_freefall.json  edl_full.json  edl_highlights.json  scene_manifest.json
tests/fixtures/ultimum_0823a77a/: edl_chute_libre.json  edl_external_freefall.json  edl_full.json  edl_highlights.json  scene_manifest_external.json  scene_manifest_instructor.json
