[project]
name = "skydiveos-autoedit"
version = "0.0.0"
description = "Automated video editing pipeline for tandem skydiving footage."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.34.0",
    "celery>=5.4.0",
    "mediapipe>=0.10.0",
    "moviepy>=1.0.3",
    "numpy>=1.24.0",
    "opencv-python>=4.9.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["vendor/"]

# The Open GoPro SDK is an optional, hardware-only dependency that /ingest
# imports lazily (see ingest/camera.py). It is not installed in CI, so let mypy
# treat it as untyped rather than erroring on the missing import.
[[tool.mypy.overrides]]
module = "open_gopro.*"
ignore_missing_imports = true

# MediaPipe ships no type stubs / py.typed marker; /analysis imports it lazily.
[[tool.mypy.overrides]]
module = "mediapipe.*"
ignore_missing_imports = true
