[project]
name = "skydiveos-autoedit"
version = "0.0.0"
description = "Automated video editing pipeline for tandem skydiving footage."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.34.0",
    "celery>=5.4.0",
    "fastapi>=0.115.0",
    "mediapipe>=0.10.0",
    "moviepy>=1.0.3",
    "numpy>=1.24.0",
    "opencv-python>=4.9.0",
    "pydantic>=2.0.0",
    "pymongo>=4.6.0",
    # dnspython is required by pymongo to resolve mongodb+srv:// connection URLs.
    "dnspython>=2.6.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["vendor/"]

# The Open GoPro SDK is an optional, hardware-only dependency that /ingest
# imports lazily (see ingest/camera.py). It is not installed in CI, so let mypy
# treat it as untyped rather than erroring on the missing import.
[[tool.mypy.overrides]]
module = "open_gopro.*"
ignore_missing_imports = true

# bleak (the BLE backend) is hardware-only and imported lazily by the camera
# discovery scanner (see ingest/scanner.py); not installed in CI.
[[tool.mypy.overrides]]
module = "bleak.*"
ignore_missing_imports = true

# boto3 ships no type stubs / py.typed marker; the discovery uploader imports it
# lazily to PUT pulled masters to S3 (see ingest/discovery.py).
[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

# MediaPipe ships no type stubs / py.typed marker; /analysis imports it lazily.
[[tool.mypy.overrides]]
module = "mediapipe.*"
ignore_missing_imports = true

# Celery ships no py.typed marker; /api's Celery app + tasks import it.
[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true
